--- a/backend/source/Dockerfile
+++ b/backend/source/Dockerfile
@@ -6,10 +6,10 @@
 FROM node:current-alpine
 
 # Create app directory
-WORKDIR /usr/src/app
+WORKDIR /backend/source/app
 
 # Install dependencies
-COPY package*.json ./
+COPY package.json ./
 RUN npm install
 
 # Bundle app source
