--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -6,7 +6,8 @@
 FROM node:current-alpine
 
 # Create app directory
-WORKDIR /backend/source/app
+#WORKDIR /backend/source/app
+WORKDIR /backend/source
 
 # Install app dependencies
 # A wildcard is used to ensure both package.json AND package-lock.json are copied
@@ -29,7 +30,7 @@ RUN npm install
 COPY . .
 
 # Expose Port --> Debug
-EXPOSE 8080
+EXPOSE 3000
 
 # Run application
 CMD [ "node", "server.js" ]
