--- a/backend/source/app/Dockerfile
+++ b/backend/source/app/Dockerfile
@@ -7,13 +7,13 @@ FROM node:current-alpine
 
 # Create app directory
 #WORKDIR /backend/source/app
-WORKDIR /backend/source/app
+WORKDIR ./backend/source/app
 
 # Install app dependencies
 # A wildcard is used to ensure both package.json AND package-lock.json are copied
 # where available (npm@5+)
 # Install dependencies
-COPY package.json ./
+#COPY package.json ./
 COPY package*.json ./
 RUN npm install
 
